--- a/_includes/topnav-v2.html
+++ b/_includes/topnav-v2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    {% if page.layout == "homepage" or page.type == "search" %}
+    {% if page.layout == "homepage" %}
     <title>{{page.title}} | {{site.title}}</title>
     {% else %}
     <title>{{page.title}} | {{page.product}}</title>
@@ -23,8 +23,12 @@
     <script type="text/javascript" src="assets/js/jquery.navgoco.min.js"></script>
     <!-- Bootstrap -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- Algolia -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.5.1/dist/instantsearch.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.5.1/dist/instantsearch-theme-algolia.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@2.5.1"></script>
     <!-- Anchor JS -->
-    {% unless page.layout == "homepage" or page.type == "search" %}
+    {% unless page.layout == "homepage" %}
         <script src="assets/js/anchor.min.js"></script>
         <script>
         $( document ).ready(function() {
