Fix the jumping of content

--- a/_sass/_search.scss
+++ b/_sass/_search.scss
@@ -1,4 +1,8 @@
+#search-hits-wrapper {
+  display: none;
+}
 #search-searchbar {
+  height: 46px;
   margin: 20px 10px 20px 0px;
 }
 /* Search header */
